[gd_scene load_steps=8 format=2]

[ext_resource path="res://3DWithCollisions/Display.gd" type="Script" id=1]
[ext_resource path="res://3DWithCollisions/InputControlCollisions.gd" type="Script" id=2]
[ext_resource path="res://3D/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://3DWithCollisions/LocalPlayer3DCollisions.gd" type="Script" id=4]
[ext_resource path="res://3DWithCollisions/NetPlayer3DCollisions.gd" type="Script" id=5]
[ext_resource path="res://3D/Floor.tscn" type="PackedScene" id=6]
[ext_resource path="res://3D/Wall.tscn" type="PackedScene" id=7]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 20, 0 )

[node name="InputControl" type="Node" parent="."]
script = ExtResource( 2 )

[node name="LocalPlayer" parent="InputControl" instance=ExtResource( 3 )]
transform = Transform( 0.999999, 0, 0, 0, -4.37113e-008, -1, 0, 0.999999, -4.37114e-008, 0, 3, 7 )
collision_layer = 0
script = ExtResource( 4 )

[node name="NetPlayer" parent="InputControl" instance=ExtResource( 3 )]
transform = Transform( -0.999999, -8.74227e-008, 3.82137e-015, 0, -4.37113e-008, -1, 8.74227e-008, -0.999999, 4.37114e-008, 0, 3, -7 )
collision_layer = 0
script = ExtResource( 5 )

[node name="Floor" parent="." instance=ExtResource( 6 )]

[node name="Wall" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 10, 1.5, 0 )

[node name="Wall2" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, -10, 1.5, 0 )

[node name="Wall3" parent="." instance=ExtResource( 7 )]
transform = Transform( -4.37114e-008, 0, 2, 0, 1, 0, -1, 0, -8.74228e-008, 0, 1.5, 10 )

[node name="Wall4" parent="." instance=ExtResource( 7 )]
transform = Transform( -4.37114e-008, 0, 2, 0, 1, 0, -1, 0, -8.74228e-008, 0, 1.5, -10 )

[node name="Wall5" parent="." instance=ExtResource( 7 )]
transform = Transform( -4.37114e-008, 0, 2, 0, 1, 0, -1, 0, -8.74228e-008, 0, 7, 0 )

[node name="Wall6" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 0.587785, -1.61803, 0, 0.809017, 1.17557, -7, 1.5, 4.5 )

[node name="Wall7" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 0.587785, 1.61803, 0, -0.809017, 1.17557, 7, 1.5, -4.5 )

[node name="Display" type="CanvasLayer" parent="."]

[node name="LocalLabel" type="Label" parent="Display"]
margin_right = 40.0
margin_bottom = 36.0

[node name="NetLabel" type="Label" parent="Display"]
margin_right = 40.0
margin_bottom = 36.0
